# Oil_Brent_Price_Tracker

./: README.md  model_tesla.tflite  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/oil_brent_price_tracker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/oil_brent_price_tracker/: MainActivity.kt  RestEngine.kt  UserService.kt
app/src/main/java/com/example/oil_brent_price_tracker/fragments/: InfoFragment.kt  NewsFragment.kt  PredictFragment.kt
app/src/main/java/com/example/oil_brent_price_tracker/newsDataCollection/: newsData.kt
app/src/main/java/com/example/oil_brent_price_tracker/pricesDataCollection/: pricesData.kt
app/src/main/java/com/example/oil_brent_price_tracker/tabs/: PagerAdaptar.kt
app/src/main/res/drawable/: bottom_shape_navigation.xml  ic_baseline_equalizer_24_orange.xml  ic_baseline_import_export_25_orange.xml  ic_baseline_info_26_orange.xml
app/src/main/res/layout/: activity_main.xml  activity_rest_engine.xml  content_rest_engine.xml  fragment_info.xml  fragment_news.xml  fragment_predict.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/oil_brent_price_tracker/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
huggingFaceApiDemo/: .gcloudignore  Dockerfile  README.md  app.yaml  cmd.txt  iris.pkl  main.py  model.py  pyproject.toml  requirements.txt
huggingFaceApiDemo/templates/: index.html
