[tool.poetry]
name = "huggingfaceapidemo"
version = "0.1.0"
description = ""
authors = ["Henry Ruiz <henry.ruiz@tamu.edu>"]

[tool.poetry.dependencies]
python = "3.8"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
torch = "^1.9.0"
transformers = "^4.7.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
